fix the styling of the first element such that there wont be those awkard spaces around it thats uneven with the 2nd select
Former-commit-id: 40c47fe692c5555c781d2827b9daa97f96731a37

--- a/style/dc.css
+++ b/style/dc.css
@@ -512,6 +512,12 @@ body .dc-chart g.row text {
   padding: 20px 0 0 0; }
   .composite_chart_type .multi_row_selector table {
     margin: 1px 0 0 0; }
+  .composite_chart_type .multi_row_selector tr td:first-child {
+    width: 100px; }
+    .composite_chart_type .multi_row_selector tr td:first-child select {
+      width: 80px; }
+  .composite_chart_type .multi_row_selector tr td:nth-child(2) select {
+    width: 360px; }
   .composite_chart_type .multi_row_selector tr:first-child td {
     border-top: 1px solid #bbbbbb;
     padding: 12px 3px 3px 3px; }
